crates/outbox-publisher-derive/tests/ui/02_missing_aggregate.stderr
error: missing required `#[event(aggregate = "...")]` attribute
 --> tests/ui/02_missing_aggregate.rs:6:12
  |
6 | pub struct UserRegistered {
  |            ^^^^^^^^^^^^^^
